@@ -11,6 +11,7 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
   David Hawes!)
 - Graphics: Implemented GCOL action codes 5-7
 - Graphics: Hopefully fixed a triangle drawing bug.
+- Graphics: Implement VDU23,16 (as far as already implemented) in VDU5 mode
 - BASIC: Fix COLOUR(r,g,b) function to return correct values in 256-colour
   modes.
 - BASIC: Fix behaviour of RND followed by a space before parentheses to match
